recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:3: error: type mismatch;
 found   : Double
 required: Int
    squareSide(levels, length);
                       ^SquareKoch:6: error: type mismatch;
 found   : Double
 required: Int
    squareSide(levels, length);
                       ^SquareKoch:9: error: type mismatch;
 found   : Double
 required: Int
    squareSide(levels, length);
                       ^SquareKoch:12: error: type mismatch;
 found   : Double
 required: Int
    squareSide(levels, length);
                       ^